clang/test/BSC/Negative/OwnedStruct/owned_struct_in_function_scope.cbs
// RUN: %clang_cc1 -verify %s

void foo() {
    _Owned struct A { // expected-error {{_Owned struct cannot be defined in function scope; move the definition to file scope}}
    _Private:
        int x;
    _Public:
        void bar(This this) { }
    };
}

void foo2() {
    _Owned struct A2 { // expected-error {{_Owned struct cannot be defined in function scope; move the definition to file scope}}
        int x;
        ~A2() { } // expected-error {{the parameter of destructor must be 'A2 this'}}
    };
}

int main() {
    _Owned struct B { // expected-error {{_Owned struct cannot be defined in function scope; move the definition to file scope}}
        int y;
        int get(This this) { return this.y; } // expected-error {{memory leak because temporary variable 'this' is _Owned or indirect _Owned type}}
    };

    _Owned struct B2 { // expected-error {{_Owned struct cannot be defined in function scope; move the definition to file scope}}
        int y;
        ~B2() { } // expected-error {{the parameter of destructor must be 'B2 this'}}
    };

    _Owned struct B3 { }; // expected-error {{_Owned struct cannot be defined in function scope; move the definition to file scope}}
    B3 b;
    return 0;
}

// Nested _Owned struct inside another _Owned struct's method body must not crash.
_Owned struct C {
    void m(This this) {
        _Owned struct D { // expected-error {{_Owned struct cannot be defined in function scope; move the definition to file scope}}
            void n(This this) { }
        };
    }
};

// _Owned struct with unknown type and method inside function scope must not crash.
void foo3() {
    _Owned struct E { // expected-error {{_Owned struct cannot be defined in function scope; move the definition to file scope}}
        c *d; // expected-error {{unknown type name 'c'}}
        void e(This this) { }
    };
}
